--- a/style/myproject.css
+++ b/style/myproject.css
@@ -73,7 +73,7 @@
     
 
     .project-item img {
-        transition: 0.2s;
+        transition: 0.8s;
 
         width: 420px;
         height: 236px;
@@ -120,4 +120,10 @@
         padding-right: 8px;
 
         
+    }
+
+    #project-page-bottom {
+        position: fixed;
+    
+        top: 1vh;
     }
